--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   barcode_scan: ^3.0.0
+  flutter_webview_plugin: ^0.3.11
 
 dev_dependencies:
   flutter_test:
